# django-database-views

./: .coveragerc  .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.rst  requirements.txt  requirements_dev.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
database_views/: apps.py  mixins.py  models.py  response.py  views.py
docs/: conf.py  index.rst  installation.rst  usage.rst
tests/: settings.py  test_mixins.py  test_response.py  test_views.py
