[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]

[bumpversion:file:database_views/__init__.py]

[wheel]
universal = 1

[flake8]
ignore = D203
exclude =
    database_views/migrations,
    .git,
    .tox,
    docs/conf.py,
    build,
    dist
max-line-length = 119

[metadata]
description-file = README.rst

[tool:pytest]
DJANGO_SETTINGS_MODULE = tests.settings
